--- a/tests/data/model_configs/dna_r10.4.1_e8.2_400bps_sup@v5.0.0/config.toml
+++ b/tests/data/model_configs/dna_r10.4.1_e8.2_400bps_sup@v5.0.0/config.toml
@@ -109,3 +109,8 @@ dim_feedforward = 2048
 deepnorm_alpha = 2.4494897
 deepnorm_beta = 0.2886751
 attn_window = [127, 128]
+
+[basecaller]
+chunksize = 12000
+overlap = 600
+batchsize = 128
